# tryx_panorama_linux

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: app_state.rs  data.rs  main.rs  screen_setup.rs  sysinfo.rs
