[package]
name = "tryx_panorama_linux"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", features = ["persistence", "serde", "default_fonts", "glow", "x11"], default-features = false }
egui_logger = { git = "https://github.com/shadowbrok3r/egui_logger" }
egui_extras = { version = "0.33", features = ["default", "image"] }
serde = { version = "1", features = ["derive"] }
crossbeam = "0.8"
serde_json = "1"
anyhow = "1"
log = "0.4"

serialport = "4.8.1"
md5 = "0.8.0"
rfd = "0.16.0"
chrono = "0.4"
sysinfo = { version = "0.37.2", features = ["serde", "multithread"] }

[dependencies.egui]
version = "0.33"
default-features = false
features = ["rayon", "bytemuck"]


[profile.release]
strip = true
lto = true
debug = false
opt-level = 3
